- add /proc/modules check to Debian init script.
- fix typo in Gentoo init script reload function.
- fix default map type selection for submounts.
  - a side affect of this patch is that when the first mount
    point of a multi-mount entry is '/' it is no longer
    mandatory. This matches the Solaris automount parsing.
- implement a timeout for LDAP communication (Dan Cox).

14/2/2005 autofs-4.1.4_beta2
----------------------------
- add update to -D variable propogation patch (Michael Blanddford).
- fix rentrancy problem when releasing the cache.
- fix 'automount: ' error in patern match in init script.
- applied autofs4 module check changes in Debian init script.
- fix handling of missing newline on last file map entry.
- fix map entry lookup order (second try).
- fix couple of comiler warnings.
- fix reload init script option for Gentoo and Debian (nearly).

26/1/2005 autofs-4.1.4_beta1
---------------------------
- fix error in define of mtab lock file.
- fix mischief caused by change in default strict -> nonstrict.
- fix replicated server detection (TCP/UDP/NFSv2/NFSv3) logic (Jeff Moyer and Ian Kent).
- fix error when setting pwd.
- fix socket leak (Jeff Moyer and Ian Kent).
- fix potential race in signal handling code (Jeff Moyer).
- miscelaneous corrections to doco and typos (Peter Breitenlohner).
- fix i18n init script underline output (Jeff Moyer).
- fix logic error in replicated server selection (Jeremy Rosengren and Ian Kent).
- the map change detection patch
    - note this requires a kernel patch to work, see README.patches.
- correct whitespace handling in maps.
- mount table handling cleanup.
- fix multi map lookup broken after the map update patch.
- fix auto master map concatenation bug (Jeff Moyer).
- merge some Debian patches (Arthur Korn)
    - 032 remove trailing slash in mount_afs.c.
    - 033 support hesiod priorities in lookup_hesiod.c.
    - 034 handle empty options in changer ,ext2 and generic modules.