@@ -7,6 +7,7 @@
     point of a multi-mount entry is '/' it is no longer
     mandatory. This matches the Solaris automount parsing.
 - implement a timeout for LDAP communication (Dan Cox).
+- change setpgrp to setsid to disascociate from tty properly.
 
 14/2/2005 autofs-4.1.4_beta2
 ----------------------------
